# NISwGSP

./: .gitignore
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/: CMakeLists.txt  CMakeLists.txt.bk  CMakeLists.txt.real  Configure.h  deng.txt  main.cpp  unitTest.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/3rd/VideoCapture/: readme.txt
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/3rd/VideoCapture/include/: qcap.common.h  qcap.h  qcap.windef.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/3rd/VideoCapture/lib/: libCCIMS.so.1  libCCIMS.so.1.1.0.196.2  libZzMP4_ubuntu1804_x64.so.1.1.0.186.1  libdvmf.so.1  libdvmf.so.1.4.13  libmfx.so.1  libmfx.so.1.34  libmfxhw64.so.1  libndi.so.5  libqcap.x64.so.1
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Feature/: FeatureController.cpp  ImageData.cpp  ImageData.h  MultiImages.cpp  MultiImages.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/ImagePair/: APAPProjectThread.cpp  APAPProjectThread.h  FeatureMatchThread.cpp  FeatureMatchThread.h  GetImageThread.cpp  GetImageThread.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Mesh/: Mesh2D.h  MeshGrid.h  MeshOptimization.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Stitching/: APAP_Stitching.cpp  NISwGSP_Stitching.cpp  Parameter.cpp  Parameter.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Util/: Blending.cpp  CommonDef.cpp  CommonDef.h  Transform.cpp  VideoCapture.cpp  VideoCapture.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Util/Networks/udp/: common.cpp  common.h  netCommon.cpp  netCommon.h  udpNode.cpp  udpNode.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/siftgpu/: CMakeLists.txt  CMakeLists_B.txt  siftgpu.cc  siftgpu.h  siftgpu_demo.cpp  siftgpu_manage.cpp  siftgpu_manage.h  types_.cc  types_.h  utils_.cc  utils_.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/siftgpu/FLANN/: CMakeLists.txt
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/siftgpu/SiftGPU/: CMakeLists.txt
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/siftgpu/VLFeat/: CMakeLists.txt
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/siftgpu/util/: util_cuda.cc  util_cudacc.cc  util_logging.cc  util_logging.h  util_math.cc  util_math.h  util_misc.cc  util_misc.h  util_opengl_utils.cc  util_opengl_utils.h  util_string.cc  util_threading.cc  util_threading.h  util_timer.cc  util_types.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/vlfeat-0.9.20/vl/: kmeans.c
